--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>[Angie's Arcane Portal]</title>
+    <title>Angie's Arcane Portal</title>
 </head>
 <body>
-    <h1>[Hi hi hello hi =^w^=]</h1>
-    <p>[This is my portal]</p>
+    <h1>Hi hi hello hi =^w^=</h1>
+    <p>This is my portal</p>
 </body>
 </html>
