--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<meta>
+    <link rel = ”stylesheet” type = ”text/css” href = ”style.css”>
+</meta>
 <head>
     <title>Angie's Arcane Portal</title>
 </head>
