--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Angie's Arcane Portal</title>
 </head>
 <body>
-    <h1>Hi hi hello hi =^w^=</h1>
-    <p>This is my portal :)</p>
+    <h1> Hi hi hello hi =^w^= </h1>
+    <p> This is my portal :) </p>
+    <p id="spellResult"></p>
+    <script>
+    function castSpell() {
+        document.getElementById("spellResult").innerText = "Your spell has been cast sucessfully!";
+    }
+    </script>
 </body>
 </html>
