--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1> Hi hi hello hi =^w^= </h1>
     <p> This is my portal :) </p>
+    <button onclick="castSpell()">Click to cast a Spell! </button>
     <p id="spellResult"></p>
     <script>
     function castSpell() {
