--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p> This is my portal :) </p>
     <button onclick="castSpell()">Click to cast a Spell! </button>
     <p id="spellResult"></p>
-    <script src="spell.js"></script>
+    <script src="spell.js.min.js"></script>
 </body>
 </html>
